--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "Vladislav Deryabkin",
   "license": "MIT",
   "scripts": {
+    "build": "pnpm -r --filter=./packages/* run build",
+    "release": "bumpp -r",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "tsc --build",
+    "typecheck": "tsc --build --noEmit",
     "deps": "taze -wIr"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.0.0",
+    "bumpp": "^10.2.0",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
     "taze": "^19.1.0",
