--- a/packages/gramok/package.json
+++ b/packages/gramok/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gramok",
+  "name": "@evermake/gramok",
   "type": "module",
   "version": "0.1.0",
   "description": "Mock implementation of Telegram Bot API to test your bots.",
