--- a/packages/gramok/package.json
+++ b/packages/gramok/package.json
@@ -11,6 +11,18 @@
     "directory": "packages/gramok",
     "url": "https://github.com/evermake/gramok"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsdown -c ./tsdown.config.ts"
   },
