--- a/packages/gramok/package.json
+++ b/packages/gramok/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@evermake/gramok",
   "type": "module",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Mock implementation of Telegram Bot API to test your bots.",
   "author": "Vladislav Deryabkin",
   "license": "MIT",
@@ -25,6 +25,9 @@
   ],
   "scripts": {
     "build": "tsdown -c ./tsdown.config.ts"
+  },
+  "dependencies": {
+    "http-graceful-shutdown": "^3.1.14"
   },
   "devDependencies": {
     "@grammyjs/types": "^3.21.0",
